--- a/package.json
+++ b/package.json
@@ -8,7 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "vue": "^2.5.17"
+    "axios": "^0.18.0",
+    "buefy": "^0.7.1",
+    "country-list": "^2.1.0",
+    "lodash": "^4.17.11",
+    "moment": "^2.22.2",
+    "vee-validate": "^2.1.3",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1",
+    "vuex-map-fields": "^1.3.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
@@ -17,6 +26,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
+    "vue-cli-plugin-buefy": "^0.3.3",
     "vue-template-compiler": "^2.5.17"
   },
   "eslintConfig": {
