--- a/package.json
+++ b/package.json
@@ -14,9 +14,8 @@
     "buefy": "^0.7.3",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
+    "vee-validate": "^2.2.8",
     "vue": "^2.6.6",
-    "vue-formly": "^2.5.8",
-    "vue-formly-buefy": "^1.0.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
