--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "vue-cli-service lint --fix"
   },
   "dependencies": {
+    "@handsontable/vue": "^4.0.0",
     "@mdi/font": "^3.5.95",
     "axios": "^0.18.0",
     "buefy": "^0.7.3",
+    "handsontable": "^7.1.0",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
     "vee-validate": "^2.2.8",
